--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SettleInn"
         tools:targetApi="31">
+        <activity android:name=".HouseDetailsFragment"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:windowSoftInputMode="adjustResize|stateHidden"
