--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,11 +43,15 @@ android {
 }
 
 dependencies {
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+    implementation 'com.codepath.libraries:asynchttpclient:2.2.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.github.bumptech.glide:glide:4.13.0'
+    implementation 'androidx.room:room-common:2.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0")
     implementation 'androidx.core:core-ktx:1.8.0'
