--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
     implementation 'com.codepath.libraries:asynchttpclient:2.2.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
